# ChangeLog for dev-ruby/authlogic
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2

  22 May 2015; Hans de Graaff <graaff@gentoo.org> -authlogic-3.4.0.ebuild,
  -authlogic-3.4.1.ebuild, -authlogic-3.4.2.ebuild:
  Cleanup.

*authlogic-3.4.4 (02 Jan 2015)

  02 Jan 2015; Hans de Graaff <graaff@gentoo.org> +authlogic-3.4.4.ebuild:
  Version bump.

*authlogic-3.4.3 (17 Oct 2014)

  17 Oct 2014; Hans de Graaff <graaff@gentoo.org> +authlogic-3.4.3.ebuild:
  Version bump.

  17 Oct 2014; Hans de Graaff <graaff@gentoo.org> -authlogic-2.1.6-r2.ebuild,
  -authlogic-3.2.0.ebuild, -authlogic-3.3.0.ebuild:
  Cleanup.

  26 Jun 2014; Hans de Graaff <graaff@gentoo.org> authlogic-3.4.2.ebuild:
  Add ruby20, ruby21.

*authlogic-3.4.2 (01 May 2014)

  01 May 2014; Hans de Graaff <graaff@gentoo.org> +authlogic-3.4.2.ebuild:
  Version bump.

*authlogic-3.4.1 (04 Apr 2014)

  04 Apr 2014; Hans de Graaff <graaff@gentoo.org> authlogic-3.4.0.ebuild,
  +authlogic-3.4.1.ebuild:
  Version bump.

  02 Apr 2014; Hans de Graaff <graaff@gentoo.org> authlogic-3.4.0.ebuild:
  Also install new History file.

*authlogic-3.4.0 (27 Mar 2014)

  27 Mar 2014; Hans de Graaff <graaff@gentoo.org> +authlogic-3.4.0.ebuild:
  Version bump.

  27 Mar 2014; Hans de Graaff <graaff@gentoo.org> -authlogic-3.1.0.ebuild,
  -authlogic-3.1.3.ebuild:
  Cleanup.

*authlogic-3.3.0 (09 May 2013)

  09 May 2013; Hans de Graaff <graaff@gentoo.org> +authlogic-3.3.0.ebuild:
  Version bump.

*authlogic-3.2.0 (14 Feb 2013)

  14 Feb 2013; Hans de Graaff <graaff@gentoo.org> +authlogic-3.2.0.ebuild:
  Version bump.

  09 Feb 2013; Hans de Graaff <graaff@gentoo.org> authlogic-3.1.0.ebuild,
  authlogic-3.1.3.ebuild:
  Update sqlite3 dependency.

*authlogic-3.1.3 (20 Jul 2012)

  20 Jul 2012; Hans de Graaff <graaff@gentoo.org> +authlogic-3.1.3.ebuild:
  Version bump.

  10 Apr 2012; Hans de Graaff <graaff@gentoo.org> authlogic-3.1.0.ebuild: