@@ -1,2 +1,3 @@
 DIST authlogic-3.4.3.gem 67584 SHA256 bc18670f15bc772f7c583073a19c4b1e32e439a84d819152d1f6511f2044d523 SHA512 5e9d30a84e7b316795c0f1c549d2c94ee883d87b3cc5a622882fb0e3da22f023fd8dc8f7643268ced7ac31873df800355cf01eb4c8e480235c5162aeda5f2e7c WHIRLPOOL ae8f640197cba327637790141b47d65a4b0c46eb48d7482351e52bf5753e75852bb029c62bd74ffb5f1fcf0cade548290f3e882be03c6a4e7cc5ffcc55218648
 DIST authlogic-3.4.4.gem 69120 SHA256 a7e17751b8f9cea6d85ddd8118f291ce6b46f825b6b375a5f8748dd765067525 SHA512 a1b0325bfc4b2a03cb1e543ae67e9fc0b3915d3a01423010ba308e4534b9fbbe6d8f6c841af6e174f905b981fd301863f4465a120d85402d4e649c2f66f76bf5 WHIRLPOOL 500648a879bdf73cd450b55b0ccf5582d452ba9de54a5fa599ad667dc7b113a4d2cc1a9d0fd7b683d286c7822661ae0d45a2bddaf16db6a7e9bd41bb0cc7de00
+DIST authlogic-3.4.6.gem 71168 SHA256 59fd0a991a09c22576f3015265c564337ab341038899f35036cc83ebd85c2e2a SHA512 5f9413bef52dbfc03edeea56fa90a707d5db9be41ea70706814e989f2a0ded1761a02794d6b2808246d80db2dc84b29ec21b78a1b83e11f0d307ac5e788077b6 WHIRLPOOL 50bbb87fdaf7e8726c4345d8b1fd35e22ccd4ae81c32ce8408531cc6d01d554cc383ad63fddd6cf4f4ec658f3d19bfd79730e35941a30e8d33f5dc083e3106e1
