@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/authlogic
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 
+*authlogic-3.4.6 (04 Aug 2015)
+
+  04 Aug 2015; Hans de Graaff <graaff@gentoo.org> +authlogic-3.4.6.ebuild:
+  Version bump. Switch default SCrypt for BCrypt since SCrypt does not work
+  with hardened.
+
   22 May 2015; Hans de Graaff <graaff@gentoo.org> -authlogic-3.4.0.ebuild,
   -authlogic-3.4.1.ebuild, -authlogic-3.4.2.ebuild:
   Cleanup.
